# dia

./: .dockerignore  Dockerfile  README.md  client.py  pyproject.toml  server.py
.github/workflows/: build-and-push.yml
