[project]
name = "hn.fm-dia-service"
version = "0.1.0"
description = "An API server for nari-labs/dia used by hn.fm"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "hn.fm"}
]
dependencies = [
    "nari-tts @ git+https://github.com/nari-labs/dia.git",
    "fastapi==0.116.1",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "https://github.com/briancaffey/hn.fm"
"Bug Tracker" = "https://github.com/briancaffey/hn.fm/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
# Never enforce `E501` (line length violations).
lint.ignore = ["C901", "E501", "E741", "W605"]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ninja>=1.11.1.4",
    "packaging>=25.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
